Fix text wrap

--- a/styles.css
+++ b/styles.css
@@ -178,6 +178,7 @@ body {
   font-weight: bold;
   color: #1F1F3D;
   padding-left: 20px;
+  overflow-wrap: break-word;
 }
 
 .idea-body {
@@ -187,6 +188,7 @@ body {
   overflow: scroll;
   overflow-x: hidden;
   height: 43%;
+  overflow-wrap: break-word;
 }
 
 .bottom {
